--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
 PORT=3333
 NODE_ENV=development
 
-PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
-PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
+OAUTH_CLIENT_NAME="authr"
+OAUTH_PUBLIC_URL="https://auth.example.com"
+OAUTH_DEFAULT_REDIRECT="https://example.com/profile"
+OAUTH_SCOPES="atproto transition:generic"
+OAUTH_PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
+OAUTH_PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
 
-PUBLIC_URL="https://auth.blebbit.org"
-COOKIE_DOMAIN=.blebbit.org
-COOKIE_PASSWORD=00000000000000000000000000000000
+COOKIE_NAME="authr_auth"
+COOKIE_SECRET=00000000000000000000000000000000
+COOKIE_ISSUER="https://auth.example.com"
+COOKIE_AUDIENCE="https://example.com"
+COOKIE_DOMAIN=.example.com
+COOKIE_HTTP_ONLY=false
