update top-level files

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 PORT=3333
 NODE_ENV=development
 
-OAUTH_CLIENT_NAME="authr"
+OAUTH_CLIENT_NAME="Authr Example"
 OAUTH_PUBLIC_URL="https://auth.example.com"
 OAUTH_DEFAULT_REDIRECT="https://example.com/profile"
 OAUTH_SCOPES="atproto transition:generic"
-OAUTH_PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
-OAUTH_PRIVATE_KEY_1=<use scripts/create-jwks.js to generate a key>
+OAUTH_PRIVATE_KEY_1=<use "pnpm genkey <name>" to generate a key>
+OAUTH_PRIVATE_KEY_2=<use "pnpm genkey <name>" to generate a key>
 
-COOKIE_NAME="authr_auth"
+COOKIE_NAME="authr_session"
 COOKIE_SECRET=00000000000000000000000000000000
 COOKIE_ISSUER="https://auth.example.com"
 COOKIE_AUDIENCE="https://example.com"
