--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -14,10 +14,11 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-query": "^5.74.11",
-    "@tanstack/react-router": "^1.114.3",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
