update a readme and env example

--- a/examples/frontend/.env.example
+++ b/examples/frontend/.env.example
@@ -1,2 +1,7 @@
 VITE_AUTHR_OAUTH_HOST=https://auth.blebbit.org
 VITE_AUTHR_COOKIE_NAME=authr_session
+VITE_AUTHR_COOKIE_DOMAIN=.blebbit.org
+# with embedded xrpc-proxy
+VITE_XRPC_HOST=https://auth.blebbit.org
+# with separate xrpc-proxy
+#VITE_XRPC_HOST=https://api.blebbit.org
