push code running in production

--- a/examples/backend-cloudflare/docker-compose.yaml
+++ b/examples/backend-cloudflare/docker-compose.yaml
@@ -5,6 +5,8 @@ volumes:
 
 services:
 
+  # if we decide to support different databases in the example...
+
   example-db:
     image: "postgres:16"
     restart: always
