--- a/examples/backend-cloudflare/wrangler.jsonc
+++ b/examples/backend-cloudflare/wrangler.jsonc
@@ -1,13 +1,21 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "backend",
-  "compatibility_date": "2024-04-01",
-  "main": "./src/index.tsx",
-  "assets": {
-    "directory": "./dist"
+  "name": "authr-example-backend",
+  "main": "src/index.ts",
+  "compatibility_date": "2025-05-09",
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "observability": {
+    "enabled": true
   },
   "kv_namespaces": [{
     "binding": "KV",
     "id": "a8b27092b45e4358a18ec4dd4a4349b0"
   }],
+  "vars": {
+    "COOKIE_NAME": "authr_session",
+    "COOKIE_ISSUER": "https://auth.authr.blebbit.dev",
+    "COOKIE_AUDIENCE": "https://app.authr.blebbit.dev"
+  }
 }
