--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite --port 3000",
     "start": "vite --port 3000",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "build": "vite build && tsc",
+    "preview": "$npm_execpath run build && wrangler pages dev",
+    "deploy": "$npm_execpath run build && wrangler pages deploy",
     "serve": "vite preview",
     "test": "vitest run"
   },
@@ -28,9 +31,11 @@
     "react-hook-form": "^7.56.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.6",
+    "unenv": "^1.10.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.1.1",
     "@tanstack/react-query-devtools": "^5.75.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -43,6 +48,7 @@
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "wrangler": "^4.14.4"
   }
 }
