--- a/examples/backend-cloudflare/package.json
+++ b/examples/backend-cloudflare/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app2",
+  "name": "authr-example-backend-cloudflare",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --port 3001",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
