--- a/examples/backend-cloudflare/package.json
+++ b/examples/backend-cloudflare/package.json
@@ -7,7 +7,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.7.8"
+    "hono": "^4.7.8",
+    "set-cookie-parser": "^2.7.1"
   },
   "devDependencies": {
     "wrangler": "^4.4.0"
