--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -24,6 +24,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide": "^0.509.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
