--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -7,9 +7,9 @@
     "start": "vite --port 3000",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "build": "vite build && tsc",
-    "preview": "$npm_execpath run build && wrangler pages dev",
+    "preview": "$npm_execpath run build && wrangler pages dev --port 3000",
     "deploy": "$npm_execpath run build && wrangler pages deploy",
-    "serve": "vite preview",
+    "serve": "vite preview --port 3000",
     "test": "vitest run"
   },
   "dependencies": {
