fix some more deploy / config issues

--- a/examples/backend-cloudflare/wrangler.jsonc
+++ b/examples/backend-cloudflare/wrangler.jsonc
@@ -14,6 +14,7 @@
     "id": "a8b27092b45e4358a18ec4dd4a4349b0"
   }],
   "vars": {
+    "AUTHR_ENV": "stg",
     "COOKIE_NAME": "authr_session",
     "COOKIE_ISSUER": "https://auth.authr.blebbit.dev",
     "COOKIE_AUDIENCE": "https://app.authr.blebbit.dev"
