move authr to subdir in prep for multiple packages; force refresh with extra arg

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,4 @@
-overrides:
-  oauth-client: link:../../Library/pnpm/global/5/node_modules/@atproto/oauth-client
-  api: link:../../Library/pnpm/global/5/node_modules/@atproto/api
-
 packages:
+  - 'packages/*'
+  - 'services/*'
   - 'examples/*'
-  - './'
