use Hono instead of Express for Authr

--- a/services/authr/package.json
+++ b/services/authr/package.json
@@ -1,59 +1,33 @@
 {
   "name": "authr",
-  "version": "1.0.0",
-  "description": "standalone atproto authnz server",
-  "keywords": [],
-  "author": "blebbit.app",
-  "license": "Apache-2.0",
-  "main": "dist/server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "genkey": "tsx ./scripts/create-jwks.ts ",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "lint": "eslint 'src/**/*.ts'"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@atproto-labs/handle-resolver-node": "^0.1.15",
+    "@atproto-labs/simple-store": "^0.2.0",
     "@atproto/api": "^0.15.5",
-    "@atproto/jwk-jose": "^0.1.5",
-    "@atproto/jwk-webcrypto": "^0.1.6",
+    "@atproto/jwk": "^0.1.5",
+    "@atproto/jwk-jose": "^0.1.6",
     "@atproto/oauth-client": "^0.3.16",
-    "@atproto/oauth-client-node": "^0.2.13",
-    "@atproto/syntax": "^0.4.0",
-    "@authzed/authzed-node": "^1.2.3",
+    "@atproto/oauth-types": "^0.2.7",
     "@blebbit/flexicon": "^0.0.5",
-    "@tanstack/react-query": "^5.74.11",
-    "@whatwg-node/cookie-store": "^0.2.3",
-    "api": "link:../../Library/pnpm/global/5/node_modules/@atproto/api",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
+    "@hono/node-server": "^1.14.1",
+    "dotenv": "^16.5.0",
+    "hono": "^4.7.9",
     "jose": "^6.0.11",
     "kysely": "^0.27.6",
-    "multiformats": "^13.3.3",
-    "oauth-client": "link:../../Library/pnpm/global/5/node_modules/@atproto/oauth-client",
-    "pg": "^8.14.1",
+    "pg": "^8.15.5",
     "pg-boss": "^10.2.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.14",
-    "@types/pg": "^8.11.11",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.23.0",
-    "express": "^5.1.0",
-    "install": "^0.13.0",
-    "nodemon": "^3.1.9",
-    "npm": "^11.2.0",
-    "prettier": "^3.5.3",
-    "ts-jose": "^6.0.10",
-    "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.13",
-    "tsc-watch": "^6.2.1",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "@types/node": "^20.11.17",
+    "@types/pg": "^8.11.14",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
   }
 }
