--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.114.3",
