--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@atproto/common-web": "^0.4.2",
+    "@blebbit/authr-react": "workspace:*",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -26,6 +27,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.11",
     "lucide": "^0.509.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
