--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,23 @@ packages:
   - 'packages/*'
   - 'services/*'
   - 'examples/*'
+
+# catalogs:
+  # Can be referenced through "catalog:react"
+  # react:
+  #   react: 18.3.1
+  #   react-dom: 18.3.1
+  #   '@types/react': 18.3.21
+  #   '@types/react-dom': 18.3.7
+
+  # Can be referenced through "catalog:peer-react"
+  # peer-react:
+  #   react: ^18.0.0 || ^19.0.0 || ^19.0.0-0
+  #   react-dom: ^18.0.0 || ^19.0.0 || ^19.0.0-0
+
+  # Can be referenced through "catalog:repo"
+  # repo:
+  #   tslib: 2.8.1
+  #   tsup: 8.4.0
+  #   typescript: 5.8.3
+  #   zx: 8.4.1
