--- a/services/authr/package.json
+++ b/services/authr/package.json
@@ -13,8 +13,10 @@
     "@atproto/api": "^0.15.5",
     "@atproto/jwk": "^0.1.5",
     "@atproto/jwk-jose": "^0.1.6",
+    "@atproto/jwk-webcrypto": "^0.1.6",
     "@atproto/oauth-client": "^0.3.16",
     "@atproto/oauth-types": "^0.2.7",
+    "@atproto/syntax": "^0.4.0",
     "@blebbit/flexicon": "^0.0.5",
     "@hono/node-server": "^1.14.1",
     "dotenv": "^16.5.0",
