--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -16,11 +16,13 @@
     "@atproto/common-web": "^0.4.2",
     "@blebbit/authr-react": "workspace:*",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.4",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-form": "^1.11.1",
-    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
@@ -51,7 +53,7 @@
     "jsdom": "^26.0.0",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.7.2",
-    "vite": "^6.1.0",
+    "vite": "^6.3.5",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4",
     "wrangler": "^4.14.4"
