--- a/packages/authr-react/package.json
+++ b/packages/authr-react/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@blebbit/authr-react",
   "version": "0.0.0",
-  "main": "src/index.ts",
   "type": "module",
   "private": true,
+  "main": "dist/authr-react.js",
+  "files": ["dist"],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,12 +12,20 @@
     "preview": "vite preview",
     "test": "vitest run"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-router": "^1.120.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jose": "^6.0.11",
+    "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
+    "tw-animate-css": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -24,15 +33,29 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-router": "^1.120.5",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "globals": "^16.0.0",
+    "jose": "^6.0.11",
     "jsdom": "^26.1.0",
+    "lucide-react": "^0.503.0",
+    "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "tw-animate-css": "^1.3.0",
     "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.1.3"
   }
 }
