--- a/packages/authr-react/tsconfig.json
+++ b/packages/authr-react/tsconfig.json
@@ -4,5 +4,11 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
-  "types": ["@testing-library/jest-dom"]
+  "compilerOptions": {
+    "types": ["@testing-library/jest-dom"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+    }
+  }
 }
