--- a/services/authr/package.json
+++ b/services/authr/package.json
@@ -17,8 +17,9 @@
     "@atproto/oauth-client": "^0.3.16",
     "@atproto/oauth-types": "^0.2.7",
     "@atproto/syntax": "^0.4.0",
+    "@authzed/authzed-node": "^1.3.1",
     "@blebbit/flexicon": "^0.0.5",
-    "@hono/node-server": "^1.14.1",
+    "@hono/node-server": "^1.14.2",
     "dotenv": "^16.5.0",
     "hono": "^4.7.9",
     "jose": "^6.0.11",
@@ -29,7 +30,7 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.14",
-    "tsx": "^4.7.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
