--- a/examples/backend-cloudflare/package.json
+++ b/examples/backend-cloudflare/package.json
@@ -28,6 +28,6 @@
     "@types/node": "^22.15.19",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
-    "wrangler": "^4.15.2"
+    "wrangler": "~4.15"
   }
 }
