--- a/packages/authr-react-tanstack/package.json
+++ b/packages/authr-react-tanstack/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "@blebbit/authr-react",
+  "name": "@blebbit/authr-react-tanstack",
   "version": "0.0.0",
   "type": "module",
-  "private": true,
-  "main": "dist/authr-react.js",
-  "files": ["dist"],
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "not-module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -13,7 +24,9 @@
     "test": "vitest run"
   },
   "peerDependencies": {
+    "@blebbit/authr-react-common": "workspace:*",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tanstack/react-form": "^1.11.3",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-router": "^1.120.5",
     "@uidotdev/usehooks": "^2.4.1",
@@ -25,37 +38,48 @@
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.0"
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@blebbit/authr-react-common": "workspace:*",
     "@eslint/js": "^9.25.0",
+    "@microsoft/api-extractor": "^7.52.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-router": "^1.120.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@tanstack/react-query": "^5.76.1",
-    "@tanstack/react-router": "^1.120.5",
     "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "globals": "^16.0.0",
     "jose": "^6.0.11",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.503.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "tw-animate-css": "^1.3.0",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.1.3"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3",
+    "zod": "^3.25.28"
   }
 }
