--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -33,6 +33,7 @@
     "jose": "^6.0.11",
     "lucide": "^0.509.0",
     "lucide-react": "^0.503.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
