various changes to cleanup and fix prod issues

--- a/examples/backend-cloudflare/wrangler.jsonc
+++ b/examples/backend-cloudflare/wrangler.jsonc
@@ -24,6 +24,7 @@
     "COOKIE_NAME": "authr_session",
     "COOKIE_ISSUER": "https://auth.authr.blebbit.dev",
     "COOKIE_AUDIENCE": "https://app.authr.blebbit.dev",
-    "ATPROTO_SERVICE_DOMAIN": "api.authr.blebbit.org"
+    "ATPROTO_SERVICE_DOMAIN": "api.authr.blebbit.org",
+    "AUTHZ_HOST": "https://auth.authr.blebbit.dev"
   }
 }
