--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.114.3",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.114.3",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
