--- a/examples/frontend-tanstack/package.json
+++ b/examples/frontend-tanstack/package.json
@@ -17,8 +17,11 @@
     "@blebbit/authr-react-common": "workspace:*",
     "@blebbit/authr-react-tanstack": "workspace:*",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.4",
     "@tailwindcss/vite": "^4.0.6",
@@ -31,6 +34,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "jose": "^6.0.11",
     "lucide": "^0.509.0",
     "lucide-react": "^0.503.0",
