add markdown editor to example, various cleanups

--- a/examples/frontend-tanstack/package.json
+++ b/examples/frontend-tanstack/package.json
@@ -37,6 +37,8 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.114.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "@uiw/react-markdown-preview": "^5.1.4",
+    "@uiw/react-md-editor": "^4.0.7",
     "authr-example-flexicon": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,6 +53,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.6",
